followed basic rules of the assignment

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <link rel="stylesheet" href="styles.css">
    </head>
    <body>
       <header>
-         <h1>Lorem Ipsum</h1>
+         <h1 id="mainHeading">Lorem Ipsum</h1>
          <nav>
             <ul>
                <li><a href="#loremIpsum">Lorem Ipsum</a></li>
@@ -26,7 +27,7 @@
          </section>
 
          <section id="ipsumHistory">
-            <p>Does the above text look weird to you? Or did your eyes just kind of flow over it as if everything was normal. That's the power of Lorem Ipsum. Lorem Ipsum has been used for years as filler text when designing websites. The words are uniquely suited to feature many of the same frequency of letters as our normal text. However, Lorem Ipsum likely dates back looong before the advent of the internet - Richard McClintock is credited as creating the filler text in order to layout pages of a book on a printing press in the 15th century. Lorem Ipsum is based on the works of Cisero. In fact much of the starting paragraph can be found in sections 1.10.32 - 33 of Cicero's work:</p>
+            <p id="testP" class="funParagraph">Does the above text look weird to you? Or did your eyes just kind of flow over it as if everything was normal. That's the power of Lorem Ipsum. Lorem Ipsum has been used for years as filler text when designing websites. The words are uniquely suited to feature many of the same frequency of letters as our normal text. However, Lorem Ipsum likely dates back looong before the advent of the internet - Richard McClintock is credited as creating the filler text in order to layout pages of a book on a printing press in the 15th century. Lorem Ipsum is based on the works of Cisero. In fact much of the starting paragraph can be found in sections 1.10.32 - 33 of Cicero's work:</p>
 
             <q>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</q>
 
