--- a/index.html
+++ b/index.html
@@ -11,22 +11,20 @@
                <li><a href="#loremIpsum">Lorem Ipsum</a></li>
                <li><a href="#ipsumHistory">History of Lorem Ipsum</a></li>
                <li><a href="#otherGenerators">Other Generators</a></li>
-               <ul>
-                  <li><a href="#pirateIpsum">Pirate Ipsum</a></li>
-                  <li><a href="#cupcakeIpsum">Cupcake Ipsum</a></li>
-                  <li><a href="#jeffsum">Jeffsum</a></li>
-               </ul>
+               <li><a href="#pirateIpsum">Pirate Ipsum</a></li>
+               <li><a href="#cupcakeIpsum">Cupcake Ipsum</a></li>
+               <li><a href="#jeffsum">Jeffsum</a></li>
             </ul>
          </nav>
       </header>
 
       <main>
-         <section id="loremIpsum">
+         <section id="loremIpsum" class="lightGray">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0QLU2LMVlP56Ag6F9DKQnmMoU64CqIa-zSA&usqp=CAU">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, reiciendis fuga. Corrupti est excepturi porro pariatur dolores modi quo numquam debitis incidunt sapiente error vel nulla officiis odit assumenda autem repudiandae natus, laborum, delectus sunt nesciunt totam rerum ad. Impedit non deleniti dolor repellat? Odio reiciendis aut nesciunt aliquam, velit commodi consequuntur eos qui obcaecati officia maiores maxime amet laboriosam enim quo corrupti odit atque rem nihil optio. Autem doloribus, laudantium quod rem ad incidunt, consectetur tempora, iste laboriosam hic voluptatum explicabo magnam sed minus. Exercitationem, nostrum voluptatum fuga libero provident itaque eveniet fugiat? Tempore provident accusamus, illum nam aperiam recusandae consectetur alias harum ad? Veniam, quos quisquam quis eius ipsa distinctio laboriosam quod assumenda nulla officiis cum a illum ratione ipsam, accusantium iusto iste aperiam magnam cupiditate voluptatem dolore tempore. At sunt voluptatem unde ad ea adipisci numquam facilis libero perspiciatis, incidunt ipsum natus quibusdam fugit minus consectetur eligendi!</p>
          </section>
 
-         <section id="ipsumHistory">
+         <section id="ipsumHistory" class="darkGray">
             <p id="testP" class="funParagraph">Does the above text look weird to you? Or did your eyes just kind of flow over it as if everything was normal. That's the power of Lorem Ipsum. Lorem Ipsum has been used for years as filler text when designing websites. The words are uniquely suited to feature many of the same frequency of letters as our normal text. However, Lorem Ipsum likely dates back looong before the advent of the internet - Richard McClintock is credited as creating the filler text in order to layout pages of a book on a printing press in the 15th century. Lorem Ipsum is based on the works of Cisero. In fact much of the starting paragraph can be found in sections 1.10.32 - 33 of Cicero's work:</p>
 
             <q>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</q>
@@ -40,7 +38,7 @@
             <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nemo repellat harum exercitationem omnis! Consectetur consequuntur libero asperiores maiores minus.</q>
          </section>
 
-         <section id="otherGenerators">   
+         <section id="otherGenerators" class="lightGray">   
             <p>Since Lorem Ipsum has become so well known other ipsum generators have popped up. There is pirate ipsum, cupcake ipsum, and even jeffsum - a Lorem Ipsum generator that produces content based on Jeff Goldblum quotes. You can see some examples of those below.</p>
          
             <article id="pirateIpsum">
