Forgot the footer and last paragraph - fixed now

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <!-- <link rel="stylesheet" href="normalize.css"> -->
       <link rel="stylesheet" href="styles.css">
    </head>
    <body>
@@ -65,12 +66,14 @@
                </p>
             </article>
          
+         </section>
+         <section id="epilogue" class="darkGray">
             <p>While the usefulness of these different ipsum generators are debatable - do they actually follow along with the original purpose of providing words that look close enough for our brains to thing "oh yeah that's text"? Probably not, but that's okay. It's all just for fun!</p>
          </section>
       </main>
 
       <footer>
-         &copy; Copyright Josh Eimer 2021
+         <div>&copy; Copyright Josh Eimer 2021</div>
       </footer>
    </body>
 </html>
